# wf-themes

./: .gitignore  README.md
extension/: background.js  manifest.json  popup.css  popup.html  popup.js
extension/themes/: clay.css  ink.css  paper.css  sage.css  stone.css
native-host/: Cargo.toml
native-host/src/: main.rs
packaging/: com.yannick.wf_themes.json.tpl
scripts/: build-windows.sh  build-xpi.sh  install-native-host.sh  sync-themes.sh
windows/: com.yannick.wf_themes.json.tpl  install.ps1  wf-themes-host.bat.tpl
