[package]
name = "wf-themes-host"
version = "0.1.0"
edition = "2024"
description = "Firefox native messaging host: watches wmenu's config.toml and pushes theme changes to the wf-themes extension."
license = "MIT"

[dependencies]
anyhow = "1"
directories = "5"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
